css/codeupdesignsite.css
html {
    margin: 0;
    padding: 0;
    width: 100%;
    box-sizing: border-box;
}
.center {
    text-align: center;
}
#whitebar2 {
    display: none
}

#ogo2 {
    display: none
}

#logoimg2 {
    display: none;
}

body {
    background-color: #F0F0F0;
    margin: 0;
}


.red {
    background-color: #E6563B;
}

.yellow {
    background-color: #EB9D3A;
}

.green {
    background-color: #7CB06C;
}

.blue {
    background-color: #00ABA9;
}

.anton {
    font-family: 'Anton', sans-serif;
    letter-spacing: 2px;
}

.abel {
    font-family: 'Abel', sans-serif;
}

h1 {
    font-size: 64px;
}

h2 {
    font-size: 48px;
}

h3 {
    font-size: 40px;
}

h4 {
    font-size: 32px;
}

h5 {
    font-size: 28px;
}


#container {
    display: grid;
    margin: 0;
    padding: 0;
    grid-template-columns: 20px repeat(10, 1fr) 20px;
    justify-content: center;
    align-content: center;
    grid-gap: 0;
    height: 100%;
    width: 100vw;
    grid-template-areas: ' .  .  .  .  .  .  .  .  .  .  .  . ' ' wb wb wb wb  wb wb wb  wb wb wb  wb wb  ' ' .  .  lgt lgt lgt lgt  lgt lgt lgt lgt . . ' ' .  . smlgt smlgt smlgt smlgt smlgt smlgt smlgt smlgt . . ' ' bglgt bglgt bglgt bglgt bglgt bglgt bglgt bglgt bglgt bglgt bglgt bglgt ' ' . pc pc pc pc pc pc pc pc pc pc . ' '.  redc redc redc redc redc yellowc yellowc yellowc yellowc yellowc .' '.  greenc greenc greenc greenc greenc bluec bluec bluec bluec bluec . ' '.   .  .  sel sel sel sel sel  sel  .  .  .' ' . imgmob imgmob imgmob imgmob imgmob imgmob imgmob imgmob imgmob imgmob .' '. proj proj proj proj .  bar bar bar bar bar  .';
}


#logo {
      grid-area: lg;
      margin: auto;
      height: 105px;
      width: 105px;
      margin-top: -10px
  }

#logoimg {
    height: 100%;
    width: 100%;
    z-index: 2;
    display: block;
    margin: auto;
    margin-top: -20px;
    vertical-align: middle;
}

#whitebar {
    grid-area: wb;
    background-color: white;
    width: 100%;

}


#logotext {
    grid-area: lgt;
    text-align: center;
    margin: auto;
    margin-bottom: 0;
    height: 120px;
    padding: 0;
}


#smlogotext {
    grid-area: smlgt;


}

#smlogoflex {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    list-style-type: none;
    padding: 0;
    height: 10px;
}

#biglogotext {
    grid-area: bglgt;
    text-align: center;
    height: 150px;
}


#parkcity {
    grid-area: pc;
    text-align: center;


}

.colorcircles {
    height: 105px;
    width: 105px;
    border-radius: 50%;
    border: 5px solid white;
    text-align: center;
}


.leftcircle {
    margin-right: -10%;

}


.topcircle {
    margin: auto;
}

.bottomcircle {
    margin: auto;
    margin-top: 5px;
    margin-bottom: 100px;
}

.circletext {
    color: white;
    line-height: 105px;
}

#redcircle {
    grid-area: redc;
    background-color: #E6563B;
    margin-right: 5px;
}

#yellowcircle {
    grid-area: yellowc;
    background-color: #EB9D3A;
    margin-left: 5px;
}

#greencircle {
    grid-area: greenc;
    background-color: #7CB06C;
    margin-right: 5px;
}

#bluecircle {
    grid-area: bluec;
    background-color: #00ABA9;
    margin-left: 5px;
}

#selectedwork {
    grid-area: sel;
    text-align: center;
    margin-bottom: 30px;
    white-space: nowrap;
}

#imgformobilescreen {
    background-color: #F0F0F0;
    grid-area: imgmob;
    border: 20px solid #E6E6E6;
    border-radius: 10px;
}

#featuredproject {
    grid-area: proj;
    margin-bottom: 50px;
    white-space: nowrap;
}

#smcirclebar {
    grid-area: bar;
    margin-top: -10px;
}

#smcirclebar ul {
    display: flex;
    list-style-type: none;
    justify-content: space-between;
    text-align: center;
    line-height: 18px;
}

.smallcircs {
    height: 18px;
    width: 18px;
    border-radius: 50%;
}


#smcircrow {
    display: none;
}

#hrsmall {
    display: none;
}

#imgcardsm1, #imgcardsm2, #imgcardsm3, #imgcardsm4 {
    display: none;
}

#thelast {
    display: none;
}

#imgcardlg1, #imgcardlg2, #imgcardlg3, #imgcardlg4 {
    display: none;
}

#art {
    display: none;
}

.smhide {
    display: none;
}
#smnavbar li {

}
/* -----------Start of Small Screen------------------------------------------------------------ */

@media screen and (min-width: 576px) {


    #container {
        display: grid;
        margin: 0;
        padding: 0;
        grid-template-columns: repeat(8, 1fr);
        justify-content: center;
        align-content: center;
        grid-gap: 0;
        height: 100%;
        width: 100vw;
        grid-template-areas: ' . . . . . . . . ' 'wb wb wb wb wb wb wb wb ' '. . lgt lgt lgt lgt . . ' 'bglgt bglgt bglgt bglgt bglgt bglgt bglgt bglgt' '. pc pc pc pc pc pc . ' '. crc crc crc crc crc crc .' '. . . sel sel . . .' '. img1 img1 img1 img2 img2 img2 .' '. img3 img3 img3 img4 img4 img4 .';
    }

    #whitebar2 {
        display: inline-block;
        grid-area: wb;
    }

    #logo2 {
        display: inline-block;
        grid-area: lg;
        margin: auto;
        height: 105px;
        width: 105px;
        margin-top: -10px
    }

    #logoimg2 {
        display: inline-block;
        height: 100%;
        width: 100%;
        z-index: 2;
        margin: auto;
        /*margin-top: -20px;*/
        vertical-align: middle;
    }
    #imgcardsm1 {
        grid-area: img1;
    }

    #imgcardsm2 {
        grid-area: img2;
    }

    #imgcardsm3 {
        grid-area: img3;
    }

    #imgcardsm4 {
        grid-area: img4;
    }

    #imgcardsm1, #imgcardsm2, #imgcardsm3, #imgcardsm4 {
        display: inline-block;
    }


    .smallcircssm {
        height: 18px;
        width: 18px;
        border-radius: 50%;
        line-height: 18px;
        text-align: center;
    }

    .imgsm {
        height: 90%;
        width: 90%;
        border: 10px solid #E6E6E6;
        border-radius: 10px;
    }


    br {
        display: none;
    }

    #biglogotext {
        white-space: nowrap;
    }

    /*----this class hides elements on XS/mobile sized screens---*/
    .xshide {
        display: none;
    }

    #smcircrow {
        display: inline-block;
        grid-area: crc;
        padding: 0;
    }

    #smcircrow ul {
        display: flex;
        justify-content: space-between;
        padding: 0;
    }

    #smcircrow ul li {
        list-style: none;

    }

    #smcircrow ul li div {
        height: 105px;
        width: 105px;
        border-radius: 50%;
        border: 5px solid white;
        text-align: center;
    }

    #redcirclexs {
        grid-area: redc;
        background-color: #E6563B;
        margin-right: 5px;
    }

    #yellowcirclexs {
        grid-area: yellowc;
        background-color: #EB9D3A;
        margin-left: 5px;
    }

    #greencirclexs {
        grid-area: greenc;
        background-color: #7CB06C;
        margin-right: 5px;
    }

    #bluecirclexs {
        grid-area: bluec;
        background-color: #00ABA9;
        margin-left: 5px;
    }

    #hrsmall {
        display: inline-block;
        color: #E6E6E6;
        width: 84%;
        text-align: center;
        margin-left: 8%;
    }

    .mdhide {
        display: none;
    }

    .smhide {
        display: none;
    }

}

#thelast {
    display: none;
}


#imgcardlg1, #imgcardlg2, #imgcardlg3, #imgcardlg4 {
    display: none;
}

#art {
    display: none;
}


/* -------Media Query for Large Screens---------------------------------------------------------------- */

@media screen and (min-width: 992px) {

    #container {
        display: grid;
        margin: 0;
        padding: 0;
        grid-template-columns: repeat(3, 1fr);
        justify-content: center;
        align-content: center;
        grid-gap: 0;
        height: 100%;
        width: 100vw;
        grid-template-areas: "  . .  .  " " wb wb  wb  " "  bglgt bglgt bglgt  " " .  pc  .  " "  crc  crc  crc  " "  sel  .  last  " "  imglg1 imglg2 art1  " " imglg3 imglg4 art1  ";
    }


    #art {
        grid-area: art1;
        display: inline-block;
        margin-top: -45px;
    }

    #imgcardlg1 {
        grid-area: imglg1;

    }

    #imgcardlg2 {
        grid-area: imglg2;
    }

    #imgcardlg3 {
        grid-area: imglg3;
    }

    #imgcardlg4 {
        grid-area: imglg4;
    }

    #thelast {
        grid-area: last;
        display: inline-block;
    }

    #imgcardsm1, #imgcardsm2, #imgcardsm3, #imgcardsm4 {
        display: none;
    }

    #logotext {
        display: none;
    }

    #imgcardlg1, #imgcardlg2, #imgcardlg3, #imgcardlg4 {
        display: inline-block;
    }

    #art ul {
        list-style-type: none;
    }

    #smcircrow ul {
        margin-left: 200px;
        margin-right: 200px;
        display: flex;
        justify-content: space-between;
        padding: 0;
    }


    /*!* this is for the new ul*!*/
    /*#mlogotext {*/
    /*    display: inline-block;*/
    /*}*/

    /*#mlogoflex{*/
    /*    list-style: none;*/
    /*}*/

/* end of styling for new ul */
}

/*----------For Extra Large Screens -----------------------------------------------------------*/

@media screen and (min-width: 1200px) {

    #container {
        display: grid;
        margin: 0;
        padding: 0;
        grid-template-columns: 12% repeat(3, 1fr) 12%;
        justify-content: center;
        align-content: center;
        grid-gap: 0;
        height: 100%;
        width: 100vw;
        grid-template-areas: ".  .  .  .  ." "wb wb wb wb wb" ". bglgt bglgt bglgt ." ".  .  pc  .  ." ".  crc  crc  crc  ." ".  sel  .  last  ." ".  imglg1 imglg2 art1  ." ". imglg3 imglg4 art1  .";

    }


}

